--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -127,6 +127,7 @@ const keywords = "Josh Winningham, Full Stack Developer, Python Developer, JavaS
 					<div class="flex space-x-4">
 						<a href="https://github.com/joshuawinningham" target="_blank" class="text-gray-700 dark:text-gray-100 hover:text-purple-600 dark:hover:text-purple-400">GitHub</a>
 						<a href="https://linkedin.com/in/joshuawinningham" target="_blank" class="text-gray-700 dark:text-gray-100 hover:text-purple-600 dark:hover:text-purple-400">LinkedIn</a>
+						<a href="mailto:joshua.winningham@gmail.com" class="text-gray-700 dark:text-gray-100 hover:text-purple-600 dark:hover:text-purple-400">Email</a>
 					</div>
 				</div>
 			</div>
