Add WordPress and PHP to About section skills

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,6 +83,10 @@ const allTechColors: TechColors = {
 		bg: "bg-sky-100 dark:bg-sky-900",
 		text: "text-sky-800 dark:text-sky-200",
 	},
+	PHP: {
+		bg: "bg-indigo-100 dark:bg-indigo-900",
+		text: "text-indigo-800 dark:text-indigo-200",
+	},
 	JavaScript: {
 		bg: "bg-yellow-100 dark:bg-yellow-900",
 		text: "text-yellow-800 dark:text-yellow-200",
@@ -644,6 +648,8 @@ const projects: Project[] = [
 									"Fastify",
 									"Python",
 									"Flask",
+									"WordPress",
+									"PHP",
 									"Supabase",
 									"AWS",
 								].map((tech) => (
