--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,6 +87,10 @@ const allTechColors: TechColors = {
 		bg: "bg-indigo-100 dark:bg-indigo-900",
 		text: "text-indigo-800 dark:text-indigo-200",
 	},
+	MySQL: {
+		bg: "bg-orange-100 dark:bg-orange-900",
+		text: "text-orange-800 dark:text-orange-200",
+	},
 	JavaScript: {
 		bg: "bg-yellow-100 dark:bg-yellow-900",
 		text: "text-yellow-800 dark:text-yellow-200",
@@ -650,6 +654,7 @@ const projects: Project[] = [
 									"Flask",
 									"WordPress",
 									"PHP",
+									"MySQL",
 									"Supabase",
 									"AWS",
 								].map((tech) => (
